system apparently had rand but not random (a very rare configuration
these days).  This led me to find a corner of the autoconf code that I
apparently hadn't checked sufficiently.  If rand was found and a
declaration made in the system files, the grap config stuff failed to
note the declaration and made its own incompatible one.  This should be
gone now.

Changed the examples to include a brief tutorial on string matching in
grap.  Suggested by John Heidemann.

1.42

There's been a long standing bug with how different versions of pic
interpret the "line from (x,y) then down 5" construct.  There was once a
bug report at
http://lists.gnu.org/archive/html/groff/2008-03/msg00003.html
about this.  As of version 1.42 grap no longer outputs this pic construct.

Dan Lasley pointed out that the key was incomplete for the bar graph example.
His fix to restore the key is included.

John Heidemann points out that bars in coordinate systems other than the
default just didn't work.  This was a bug in my yacc grammer - for
heaven's sake.  It's corrected to match the manual page.

For loops were strange in that 

.G1
for xx  from  15 to 13  do  { print "YYY" }
print "ZZZZ"
.G2

would loop infinitely.  xx never passes 13.  Added a test to make that a
null loop as well as making 

.G1
for xx  from  13 to 13  do  { print "YYY" }
print "ZZZZ"
.G2

print one "YYY".  You can still confuse loops, using strange by clauses
- for example "by 0" or "by * -1" but common cases should be covered.

Spotted by a fellow named Yuval.

Found a lurking initializer bug while fixing the for loop thing.

I added references to standard plot strings in a couple places to make
them somewhat easier to find.

1.41

Small changes to compile without warnings under g++ 4.2.0 and to find and
use ext/hash_map under g++ versions that include it.

Incorporated Tobias Toedter's patch to the grap.spec.  I'd found another
place to misspell "Kernighan" and Tobias fixed it.
